# EvoEngine

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
.claude/: settings.local.json
App/: CMakeLists.txt  CubeDemo.cpp  CubeDemo.h  Main.cpp  TestScene.cpp  TestScene.h  TriangleDemo.cpp  TriangleDemo.h
Assets/: engine_config.json
Assets/Materials/: BottomCube.ematerial  CenterCube.ematerial  GlassCube.ematerial  LeftCube.ematerial  RightCube.ematerial  TintedCube.ematerial  TopCube.ematerial
Assets/Meshes/: Cube.emesh
Assets/Prefabs/: CubePrefab.eprefab
Assets/Scenes/: CubeScene.escene
Assets/Shaders/: DebugLine.hlsl  DeferredLighting.hlsl  ForwardTransparent.hlsl  GBuffer.hlsl  PostProcess.hlsl  ShadowDepth.hlsl  StaticMesh.hlsl  Triangle.hlsl
Docs/: AssetSystem.md
Editor/: CMakeLists.txt  DebugRenderer.cpp  DebugRenderer.h  Editor.cpp  Editor.h  EditorAssetFactory.cpp  EditorAssetFactory.h  EditorMain.cpp  EditorRenderPipeline.cpp  EditorRenderPipeline.h  ImGuiLogSink.h
Engine/: CMakeLists.txt  RHIConfig.h.in
Engine/Asset/: Asset.h  AssetLoader.cpp  AssetLoader.h  AssetManager.cpp  AssetManager.h  AssetTypes.h  ShaderAsset.cpp  ShaderAsset.h  TextureAsset.cpp  TextureAsset.h
Engine/Core/: Engine.cpp  Engine.h  EngineConfig.cpp  EngineConfig.h  Log.cpp  Log.h  Types.h
Engine/Math/: Bounds.h  Color.h  Mat4.h  Math.h  MathCommon.h  Quat.h  Vec2.h  Vec3.h  Vec4.h
Engine/Platform/: FileSystem.cpp  FileSystem.h  Input.cpp  Input.h  Window.cpp  Window.h
Engine/RHI/: RHI.cpp  RHI.h  RHIBuffer.h  RHICommandList.h  RHIDescriptor.h  RHIDevice.h  RHIFence.h  RHIPipeline.h  RHIQueue.h  RHIResourcePool.h  RHISwapChain.h  RHITexture.h  RHITypes.h
Engine/RHI/DX12/: DX12BufferPool.h  DX12CommandList.cpp  DX12CommandList.h  DX12CommandListManager.cpp  DX12CommandListManager.h  DX12CommandListPool.cpp  DX12CommandListPool.h  DX12Common.h  DX12DescriptorAllocator.h  DX12DescriptorSetLayoutPool.h  DX12DescriptorSetPool.h  DX12Device.cpp  DX12Device.h  DX12Fence.cpp  DX12Fence.h  DX12GpuDescriptorAllocator.h  DX12PipelinePool.h  DX12Queue.cpp  DX12Queue.h  DX12ShaderCompiler.cpp  DX12ShaderCompiler.h  DX12ShaderPool.h  DX12SwapChain.cpp  DX12SwapChain.h  DX12TexturePool.h  DX12TypeMap.h
Engine/RHI/Vulkan/: VulkanDevice.cpp  VulkanDevice.h
Engine/Renderer/: Camera.cpp  Camera.h  RenderGraph.cpp  RenderGraph.h  RenderPipeline.cpp  RenderPipeline.h  Renderer.cpp  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  ViewportFrame.cpp  ViewportFrame.h
Engine/Scene/: Components.h  Entity.h  MaterialAsset.cpp  MaterialAsset.h  MaterialWriter.cpp  MaterialWriter.h  MeshAsset.cpp  MeshAsset.h  MeshWriter.cpp  MeshWriter.h  PrefabAsset.cpp  PrefabAsset.h  PrefabWriter.cpp  PrefabWriter.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneWriter.cpp  SceneWriter.h
Schemas/: CMakeLists.txt  Common.fbs  Material.fbs  Mesh.fbs  Prefab.fbs  Scene.fbs
cmake/: EvoEngine.cmake
